added plan fir first part